<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:enabled="true" android:checkableBehavior="single">

        <item
            android:id="@+id/color_fragment"
            android:icon="@drawable/color_fragment_menu_icon"
            android:title="@string/fragment_color_menuitem_title"
            />

        <item
            android:id="@+id/list_fragment"
            android:icon="@drawable/red_list_fragment_menu_icon"
            android:title="@string/fragment_list_menuitem_title"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/login_fragment"
            android:icon="@drawable/login_menu_icon"
            android:title="@string/fragment_login_menuitem_title"
            />

    </group>

</menu>